--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "bootstrap-icons": "^1.10.2",
     "jquery": "^3.6.1",
     "primeicons": "^6.0.1",
-    "primeng": "^10.0.0",
+    "primeng": "^11.0.0-rc.1",
     "rxjs": "~6.5.5",
     "tether": "^2.0.0",
     "tslib": "^2.0.0",
