--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "chart.js": "^2.7.0",
     "jquery": "^3.6.1",
     "primeicons": "^6.0.1",
     "primeng": "^11.0.0-rc.1",
